DMC-E系列控制卡例程/VB.net/例2_连续运动/例2_连续运动/LTDMC.vb


    '单轴运动
    '点位运动
    ' <summary>
    ' 单轴定长运动
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="Dist">目标位置</param>
    ' <param name="posi_mode">位置模式：0-相对，1-绝对</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_pmove Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Dist As Int32, ByVal posi_mode As UInt16) As Int16  '指定轴做定长位移运动
    Declare Function dmc_pmove_extern Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Dist As Double, ByVal Min_Vel As Double, ByVal Max_Vel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal Stop_vel As Double, ByVal s_para As Double, ByVal posi_mode As UInt16) As Int16 '设定速度曲线参数

    ' <summary>
    ' 在线变位
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="Dist">目标位置</param>
    ' <param name="posi_mode">位置模式：0 保留</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_reset_target_position Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Dist As Int32, ByVal posi_mode As UInt16) As Int16  '运动中改变目标位置
    ' <summary>
    ' 在线变速
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="Curr_Vel">新速度值</param>
    ' <param name="Taccdec">新加减速时间，单位s</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_change_speed Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Curr_Vel As Double, ByVal Taccdec As Double) As Int16        '在线改变指定轴的当前运动速度
    ' <summary>
    ' 强制变位
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="Dist">目标位置</param>
    ' <param name="posi_mode">位置模式：0 保留</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_update_target_position Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Dist As Int32, ByVal posi_mode As UInt16) As Int16  '强行改变目标位置
    'JOG运动
    ' <summary>
    ' 速度运动
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="dir">运动方向：0-负方向，1-正方向</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_vmove Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal dir As UInt16) As Int16    '指定轴做连续运动
    'PVT运动
    ' <summary>
    ' PVT运动数据
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="Count">数据数组元素个数</param>
    ' <param name="pTime">时间数据数组，单位s</param>
    ' <param name="pPos">位置数据数组</param>
    ' <param name="pVel">速度数据数组</param>
    ' <returns></returns>
    ' <remarks></remarks>
    Declare Function dmc_PvtTable Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Count As Int32, ByVal pTime() As Double, ByVal pPos() As Int32, ByVal pVel() As Double) As Int16
    ' <summary>
    ' PTS运动数据
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="Count">数据数组元素个数</param>
    ' <param name="pTime">时间数据数组，单位s</param>
    ' <param name="pPos">位置数据数组</param>
    ' <param name="pPercent">加速度变化百分比数据数组</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_PtsTable Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Count As Int32, ByVal pTime() As Double, ByVal pPos() As Int32, ByVal pPercent() As Double) As Int16
    ' <summary>
    ' PVTS运动数据
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="Count">数据数组元素个数</param>
    ' <param name="pTime">时间数据数组，单位s</param>
    ' <param name="pPos">位置数据数组</param>
    ' <param name="velBegin">起始速度</param>
    ' <param name="velEnd">停止速度</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_PvtsTable Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Count As Int32, ByVal pTime() As Double, ByVal pPos() As Int32, ByVal velBegin As Double, ByVal velEnd As Double) As Int16
    ' <summary>
    ' PTT运动数据
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="Count">数据数组元素个数</param>
    ' <param name="pTime">时间数据数组，单位s</param>
    ' <param name="pPos">位置数据数组</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_PttTable Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Count As Int32, ByVal pTime() As Double, ByVal pPos() As Int32) As Int16
    ' <summary>
    ' PVT启动运动
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="AxisNum">轴数：1-8</param>
    ' <param name="AxisList">轴列表</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_PvtMove Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal AxisNum As UInt16, ByVal AxisList() As UInt16) As Int16
    Declare Function dmc_PttTable_add Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Count As Int32, ByVal pTime() As Double, ByVal pPos() As Int32) As Int16
    Declare Function dmc_PtsTable_add Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Count As Int32, ByVal pTime() As Double, ByVal pPos() As Int32, ByRef pPercent As Double) As Int16
    Declare Function dmc_pvt_get_remain_space Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16

    Declare Function dmc_pvt_table_unit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Count As Int32, ByVal pTime() As Double, ByVal pPos() As Double, ByVal pVel() As Double) As Int16
    Declare Function dmc_pts_table_unit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Count As Int32, ByVal pTime() As Double, ByVal pPos() As Double, ByVal pPercent() As Double) As Int16
    Declare Function dmc_pvts_table_unit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Count As Int32, ByVal pTime() As Double, ByVal pPos() As Double, ByVal velBegin As Double, ByVal velEnd As Double) As Int16
    Declare Function dmc_ptt_table_unit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Count As Int32, ByVal pTime() As Double, ByVal pPos() As Double) As Integer
    Declare Function dmc_pvt_move Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal AxisNum As UInt16, ByVal AxisList() As UInt16) As Int16

    Declare Function dmc_SetGearProfile Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal MasterType As UInt16, ByVal MasterIndex As UInt16, ByVal MasterEven As UInt32, ByVal SlaveEven As UInt32, ByVal MasterSlope As UInt32) As Int16
    Declare Function dmc_GetGearProfile Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef MasterType As UInt16, ByRef MasterIndex As UInt16, ByRef MasterEven As UInt32, ByRef SlaveEven As UInt32, ByRef MasterSlope As UInt32) As Int16
    Declare Function dmc_GearMove Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal AxisNum As UInt16, ByVal AxisList() As Int16) As Integer

    '多轴运动
    '直线插补
    ' <summary>
    ' 单段直线插补
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="Crd">坐标系号：0-1</param>
    ' <param name="AxisNum">轴数：2-8</param>
    ' <param name="AxisList">轴列表</param>
    ' <param name="DistList">目标位置列表</param>
    ' <param name="posi_mode">位置模式：0-相对，1-绝对</param>
    ' <returns>错误代码</returns>
    ''' <remarks></remarks>
    Declare Function dmc_line_multicoor Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal Crd As UInt16, ByVal AxisNum As UInt16, ByVal AxisList() As UInt16, ByVal DistList() As Int32, ByVal posi_mode As UInt16) As Int16     '指定轴直线插补运动
    '平面圆弧
    ' <summary>
    ' 2轴单段圆弧插补
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="Crd">坐标系号：0-1</param>
    ' <param name="AxisList">轴列表</param>
    ' <param name="Target_Pos">目标位置</param>
    ' <param name="Cen_Pos">圆心位置</param>
    ' <param name="Arc_Dir">圆弧方向：0-顺时针，1-逆时针</param>
    ' <param name="posi_mode">位置模式：0-相对，1-绝对</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_arc_move_multicoor Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal Crd As UInt16, ByVal AxisList() As UInt16, ByVal Target_Pos() As Int32, ByVal Cen_Pos() As Int32, ByVal Arc_Dir As UInt16, ByVal posi_mode As UInt16) As Int16
